# abs-hardcover-sync

./: .dockerignore  .flake8  .gitignore  .progress_cache.json  .secrets.baseline  Dockerfile  LICENSE  README.md  audiobookshelf_client.py  config.py  docker-compose.yml  hardcover_client.py  main.py  pyproject.toml  pytest.ini  secrets.env.example  sync_manager.py  utils.py
.github/config/: .pre-commit-config.yaml  README.md  ci.yml  mypy.ini  security.yml
.github/workflows/: container.yml
config/: config.yaml.example  secrets.env.example
debug/: README.md  check_cache_authors.py  cleanup_duplicate_progress.py  clear_currently_reading.py  clear_edition_cache.py  debug_edition_consistency.py  debug_hardcover.py  debug_metadata.py  debug_multiple_editions.py  focused_cleanup.py  hardcover_batch_test.py  parallel_optimization.py  test_audio_progress.py  test_author_cache.py  test_author_integration.py  test_hardcover_authors.py  test_parallel_hardcover.py  test_progress_fields.py  test_progress_seconds.py  timing_analysis.py
src/: __init__.py  audiobookshelf_client.py  config.py  hardcover_client.py  main.py  sync_manager.py  utils.py
tests/: __init__.py  test_basic.py
